fix button menu on mobile

--- a/style-tablet.css
+++ b/style-tablet.css
@@ -323,22 +323,23 @@ form {
   height: 30px;
 }
 .place_for_search {
-  /* height: 30px; */
-  width: 230px;
-  padding: 10px 30px 10px 10px;
+  height: 35px;
+  width: 180px;
+  padding: 0px 0px 0px 15px;
   border-radius: 5px;
   background: #34302d;
-  margin: 0;
+  margin: 0px 10px 0px 20px;;
   border: none;
-  outline: none;
+  /* outline: none; */
   background: #555;
-  transition: .4s cubic-bezier(0, 0.8, 0, 1);
-  position: static;
+  /* transition: .4s cubic-bezier(0, 0.8, 0, 1); */
+  position: relative;
   z-index: 1;
  /* border: 1px solid black;*/
-  cursor: default;
-  font: 400 12px Arial;
+  cursor: pointer;
+  font: 400 15px Arial;
   color: #f1f1f1;
+  outline:none;
 }
 
 
@@ -347,16 +348,12 @@ form {
   display: flex;
   justify-content: center;
   align-items: center;
-  /* border: none; */
   border-radius: 5px;
-  width: 30px;
-  height: 30px;
-  /* padding: 0; */
+  width: 35px;
+  height: 35px;
   position: absolute;
-  right: 0;
-  top: 2px;
-  /* z-index: 2; */
-  /*border: 1px solid yellow;*/
+  right: -30px;
+  top: 0px;
 }
 .image_for_search::before{
   color: #eee;
@@ -364,29 +361,26 @@ form {
   font-family: 'Font Awesome 5 Free', 'Font Awesome 5 Brands';
   font-weight: 900;
   content: '\f002 ';
-  /* z-index: 2;    */
 }
 .button_for_search, .button_for_turn_back{
   display: none;
 }
-.image_for_search{
-  position: absolute;
 
-}
-.image_for_cansel::before{
-  display: none;
-  position: absolute; 
-  top: 5px;
-  right: 50px;
-  /* display: block; */
+.image_for_cansel{
+  background: #555;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  border-radius: 5px;
+  width: 35px;
+  height: 35px;
+  top: 0px;
+  left: -20px;
   color: #eee;
   font-size: 18px;
-  font-family: 'Font Awesome 5 Free', 'Font Awesome 5 Brands';
-  font-weight: 900;
-  content: 'X';
   z-index: 3;
 }
-
 .navigation, .navigation1{
   display: flex;
   flex-direction: row;
